# pillar-controller

./: .gitignore  CLAUDE.md  review-codex.txt
pi/: pyproject.toml  review-codex.txt
pi/app/: hardware_constants.py  main.py
pi/app/api/: auth.py  deps.py  schemas.py  server.py
pi/app/audio/: adapter.py
pi/app/config/: installation.py  pixel_map.py  spatial_map.py
pi/app/core/: renderer.py  state.py
pi/app/diagnostics/: patterns.py  tests.py
pi/app/effects/: audio_reactive.py  base.py  catalog.py  generative.py  imported_sim_helpers.py  imported_sim_meta.py  media_playback.py  switcher.py
pi/app/mapping/: cylinder.py  packer.py  runtime_mapper.py  runtime_plan.py
pi/app/media/: manager.py
pi/app/models/: protocol.py
pi/app/preview/: service.py
pi/app/setup/: geometry.py  patterns.py  rgb_order.py  (+1 more)
pi/config/: effects.yaml  hardware.yaml  pixel_map.yaml  system.yaml.example
pi/scripts/: deploy.sh  generate_teensy_config.py  setup.sh
pi/systemd/: pillar.service
pi/tests/: test_api_contract.py  test_audio_adapter.py  test_auth.py  test_buffer_perf.py  test_channel_config.py  test_color_order_roundtrip.py  test_effect_catalog.py  test_engine.py  test_geometry_fit.py  test_imported_animations.py  test_imported_effects.py  test_installation_schema.py  test_mapping.py  test_media.py  test_packer.py  test_pixel_map.py  test_preview_isolation.py  test_protocol.py  test_rgb_order_detection.py  test_runtime_mapper_parity.py  test_setup_session.py  test_state.py  test_strip_mapping.py  test_switcher.py  test_width_policy.py
pi/tools/: bench_effects.py
(+88 files in other folders)
